--- a/templates/base.html
+++ b/templates/base.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}">
 </head>
 <body>
-    <div>
-        <h1>Welcome to Software Design</h1>
-        <hr>
-        <br>
-        
+    <h1>Welcome to our flask project</h1>
+    <hr>
+    <br>
+    <nav>
+        <ul>
+            <li><a href="{{ url_for('index') }}">Go to index page</a></li>
+            <li><a href="{{ url_for('about') }}">Go to about page</a></li>
+        </ul>
+    </nav>
         {% block body %}
-
         {% endblock %}
-
-    </div>
 </body>
 </html>
