--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,155 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to the home page {% endblock %}
+{% block title %} Predict your salasy using AI {% endblock %}
 
 
-{% block body %} Hello world! {% endblock %}
+{% block body %} 
+
+<label for="ageSelect">Choose your age range:</label>
+
+<select id="ageSelect">
+  <option value=""> -- choose age -- </option>
+  <option value="0">18-21</option>
+  <option value="1">22-24</option>
+  <option value="2">25-29</option>
+  <option value="3">30-34</option>
+  <option value="4">35-39</option>
+  <option value="5">40-44</option>
+  <option value="6">45-49</option>
+  <option value="7">50-54</option>
+  <option value="8">55-59</option>
+  <option value="9">60-69</option>
+  <option value="10">70+</option>
+</select>
+
+<label for="genderSelect">Gender:</label>
+<select id="genderSelect">
+  <option value=""> -- select gender -- </option>
+  <option value="0">Man</option>
+  <option value="1">Nonbinary</option>
+  <option value="2">Prefer not to say</option>
+  <option value="3">Prefer to self-describe</option>
+  <option value="4">Woman</option>
+</select>
+
+<label for="countrySelect">Country:</label>
+<select id="countrySelect">
+  <option value=""> -- select country -- </option>
+  <option value="0">Algeria</option>
+  <option value="1">Argentina</option>
+  <option value="2">Australia</option>
+  <option value="3">Bangladesh</option>
+  <option value="4">Belgium</option>
+  <option value="5">Brazil</option>
+  <option value="6">Cameroon</option>
+  <option value="7">Canada</option>
+  <option value="8">Chile</option>
+  <option value="9">China</option>
+  <option value="10">Colombia</option>
+  <option value="11">Czech Republic</option>
+  <option value="12">Ecuador</option>
+  <option value="13">Egypt</option>
+  <option value="14">Ethiopia</option>
+  <option value="15">France</option>
+  <option value="16">Germany</option>
+  <option value="17">Ghana</option>
+  <option value="18">Hong Kong (S.A.R.)</option>
+  <option value="19">I do not wish to disclose my location</option>
+  <option value="20">India</option>
+  <option value="21">Indonesia</option>
+  <option value="22">Iran, Islamic Republic of...</option>
+  <option value="23">Ireland</option>
+  <option value="24">Israel</option>
+  <option value="25">Italy</option>
+  <option value="26">Japan</option>
+  <option value="27">Kenya</option>
+  <option value="28">Malaysia</option>
+  <option value="29">Mexico</option>
+  <option value="30">Morocco</option>
+  <option value="31">Nepal</option>
+  <option value="32">Netherlands</option>
+  <option value="33">Nigeria</option>
+  <option value="34">Other</option>
+  <option value="35">Pakistan</option>
+  <option value="36">Peru</option>
+  <option value="37">Philippines</option>
+  <option value="38">Poland</option>
+  <option value="39">Portugal</option>
+  <option value="40">Romania</option>
+  <option value="41">Russia</option>
+  <option value="42">Saudi Arabia</option>
+  <option value="43">Singapore</option>
+  <option value="44">South Africa</option>
+  <option value="45">South Korea</option>
+  <option value="46">Spain</option>
+  <option value="47">Sri Lanka</option>
+  <option value="48">Taiwan</option>
+  <option value="49">Thailand</option>
+  <option value="50">Tunisia</option>
+  <option value="51">Turkey</option>
+  <option value="52">Ukraine</option>
+  <option value="53">United Arab Emirates</option>
+  <option value="54">United Kingdom of Great Britain and Northern Ireland</option>
+  <option value="55">United States of America</option>
+  <option value="56">Viet Nam</option>
+  <option value="57">Zimbabwe</option>
+</select>
+
+<label for="degreeSelect">Highest Degree:</label>
+<select id="degreeSelect">
+  <option value=""> -- select degree -- </option>
+  <option value="0">Bachelor's degree</option>
+  <option value="1">Doctoral degree</option>
+  <option value="2">I prefer not to answer</option>
+  <option value="3">Master's degree</option>
+  <option value="4">No formal education past high school</option>
+  <option value="5">Professional doctorate</option>
+  <option value="6">Some college/university study without earning a bachelor's degree</option>
+</select>
+
+<label for="experienceSelect">Code Experience:</label>
+<select id="experienceSelect">
+  <option value=""> -- select code experience -- </option>
+  <option value="0">1-3 years</option>
+  <option value="1">10-20 years</option>
+  <option value="2">20+ years</option>
+  <option value="3">3-5 years</option>
+  <option value="4">5-10 years</option>
+  <option value="5">&lt; 1 years</option>
+  <option value="6">I have never written code</option>
+</select>
+
+<label for="titleSelect">Current Title:</label>
+<select id="titleSelect">
+  <option value=""> -- select title -- </option>
+  <option value="0">Data Administrator</option>
+  <option value="1">Data Analyst (Business, Marketing, Financial, Quantitative, etc)</option>
+  <option value="2">Data Architect</option>
+  <option value="3">Data Engineer</option>
+  <option value="4">Data Scientist</option>
+  <option value="5">Developer Advocate</option>
+  <option value="6">Engineer (non-software)</option>
+  <option value="7">Machine Learning/MLops Engineer</option>
+  <option value="8">Manager (Program, Project, Operations, Executive-level, etc)</option>
+  <option value="9">Other</option>
+  <option value="10">Research Scientist</option>
+  <option value="11">Software Engineer</option>
+  <option value="12">Statistician</option>
+  <option value="13">Teacher / professor</option>
+</select>
+
+
+<label for="sizeSelect">Company Size:</label>
+<select id="sizeSelect">
+  <option value=""> -- select company size -- </option>
+  <option value="0">0-49 employees</option>
+  <option value="1">10,000 or more employees</option>
+  <option value="2">1000-9,999 employees</option>
+  <option value="3">250-999 employees</option>
+  <option value="4">50-249 employees</option>
+</select>
+ 
+<form action="/predict" method="POST">
+    <button type="submit">Submit</button>
+  </form>
+{% endblock %}
